--- a/docs/projMngmnt/POC_Team_Contrib.tex
+++ b/docs/projMngmnt/POC_Team_Contrib.tex
@@ -24,14 +24,16 @@ and the POC demo.
 
 \section{Demo Plans}
 
-\wss{What will you be demonstrating}
+See section 9 of Development plan found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{here}.
+
+% \wss{What will you be demonstrating}
 
 \section{Team Meeting Attendance}
 
-\wss{For each team member how many team meetings have they attended over the
-time period of interest.  This number should be determined from the meeting
-issues in the team's repo.  The first entry in the table should be the total
-number of team meetings held by the team.}
+% \wss{For each team member how many team meetings have they attended over the
+% time period of interest.  This number should be determined from the meeting
+% issues in the team's repo.  The first entry in the table should be the total
+% number of team meetings held by the team.}
 
 \begin{table}[H]
 \centering
@@ -39,26 +41,25 @@ number of team meetings held by the team.}
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 8\\
+Kartik & 7\\
+Kyle & 8\\
+Mathew & 8\\
+Oleg & 6\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
+% \wss{If needed, an explanation for the counts can be provided here.}
 
 \section{Supervisor/Stakeholder Meeting Attendance}
 
-\wss{For each team member how many supervisor/stakeholder team meetings have
-they attended over the time period of interest.  This number should be determined
-from the supervisor meeting issues in the team's repo.  The first entry in the
-table should be the total number of supervisor and team meetings held by the
-team.  If there is no supervisor, there will usually be meetings with
-stakeholders (potential users) that can serve a similar purpose.}
+% \wss{For each team member how many supervisor/stakeholder team meetings have
+% they attended over the time period of interest.  This number should be determined
+% from the supervisor meeting issues in the team's repo.  The first entry in the
+% table should be the total number of supervisor and team meetings held by the
+% team.  If there is no supervisor, there will usually be meetings with
+% stakeholders (potential users) that can serve a similar purpose.}
 
 \begin{table}[H]
 \centering
@@ -66,24 +67,23 @@ stakeholders (potential users) that can serve a similar purpose.}
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total  & 1\\
+Kartik & 1\\
+Kyle   & 1\\
+Mathew & 1\\
+Oleg   & 1\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
+% \wss{If needed, an explanation for the counts can be provided here.}
 
 \section{Lecture Attendance}
 
-\wss{For each team member how many lectures have they attended over the time
-period of interest.  This number should be determined from the lecture issues in
-the team's repo.  The first entry in the table should be the total number of
-lectures since the beginning of the term.}
+% \wss{For each team member how many lectures have they attended over the time
+% period of interest.  This number should be determined from the lecture issues in
+% the team's repo.  The first entry in the table should be the total number of
+% lectures since the beginning of the term.}
 
 \begin{table}[H]
 \centering
@@ -91,22 +91,21 @@ lectures since the beginning of the term.}
 \toprule
 \textbf{Student} & \textbf{Lectures}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 10\\
+Kartik & 7\\
+Kyle   & 9\\
+Mathew & 9\\
+Oleg   & 8\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the lecture attendance can be provided here.}
+% \wss{If needed, an explanation for the lecture attendance can be provided here.}
 
 \section{TA Document Discussion Attendance}
 
-\wss{For each team member how many of the informal document discussion meetings
-with the TA were attended over the time period of interest.}
+% \wss{For each team member how many of the informal document discussion meetings
+% with the TA were attended over the time period of interest.}
 
 \begin{table}[H]
 \centering
@@ -114,24 +113,23 @@ with the TA were attended over the time period of interest.}
 \toprule
 \textbf{Student} & \textbf{Lectures}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 3\\
+Kartik & 2\\
+Kyle   & 3\\
+Mathew & 3\\
+Oleg   & 3\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the attendance can be provided here.}
+% \wss{If needed, an explanation for the attendance can be provided here.}
 
 \section{Commits}
 
-\wss{For each team member how many commits to the main branch have been made
-over the time period of interest.  The total is the total number of commits for
-the entire team since the beginning of the term.  The percentage is the
-percentage of the total commits made by each team member.}
+% \wss{For each team member how many commits to the main branch have been made
+% over the time period of interest.  The total is the total number of commits for
+% the entire team since the beginning of the term.  The percentage is the
+% percentage of the total commits made by each team member.}
 
 \begin{table}[H]
 \centering
@@ -139,26 +137,39 @@ percentage of the total commits made by each team member.}
 \toprule
 \textbf{Student} & \textbf{Commits} & \textbf{Percent}\\
 \midrule
-Total & Num & 100\% \\
-Name 1 & Num & \% \\
-Name 2 & Num & \% \\
-Name 3 & Num & \% \\
-Name 4 & Num & \% \\
-Name 5 & Num & \% \\
+Total & 252 & 100\% \\
+Kartik & 54 & 21\%\\
+Kyle   & 140 & 56 \%\\
+Mathew & 39 &15\% \\
+Oleg   & 19 &8\% \\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.  For
-instance, if a team member has more commits to unmerged branches, these numbers
-can be provided here.  If multiple people contribute to a commit, git allows for
-multi-author commits.}
-
+% \wss{If needed, an explanation for the counts can be provided here.  For
+% instance, if a team member has more commits to unmerged branches, these numbers
+% can be provided here.  If multiple people contribute to a commit, git allows for
+% multi-author commits.}
+Kyle's commits are inflated by his work on setting up CD/CI for building latex documents. To get it working, he made 74 commits to main to test building a new PDF document. With these commits removed, this is the new table:\\
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lll}
+    \toprule
+    \textbf{Student} & \textbf{Commits} & \textbf{Percent}\\
+    \midrule
+    Total & 178 & 100\% \\
+    Kartik & 54 & 30\%\\
+    Kyle   & 66 & 37\%\\
+    Mathew & 39 & 22\%\\
+    Oleg   & 19 & 11\%\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
 \section{Issue Tracker}
 
-\wss{For each team member how many issues have they authored (including open and
-closed issues (O+C)) and how many have they been assigned (only counting closed
-issues (C only)) over the time period of interest.}
+% \wss{For each team member how many issues have they authored (including open and
+% closed issues (O+C)) and how many have they been assigned (only counting closed
+% issues (C only)) over the time period of interest.}
 
 \begin{table}[H]
 \centering
@@ -166,22 +177,22 @@ issues (C only)) over the time period of interest.}
 \toprule
 \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Assigned (C only)}\\
 \midrule
-Name 1 & Num & Num \\
-Name 2 & Num & Num \\
-Name 3 & Num & Num \\
-Name 4 & Num & Num \\
-Name 5 & Num & Num \\
+Total & 165 & 140 \\
+Kartik & 16 & 7\\
+Kyle   & 75 & 24\\
+Mathew & 32 & 11\\
+Oleg   & 25 & 16\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
+% \wss{If needed, an explanation for the counts can be provided here.}
 
 \section{CICD}
 
-\wss{Say how CICD will be used in your project}
+See section 7.2 of development plan found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{here}.
 
-\wss{If your team has additional metrics of productivity, please feel free to
-add them to this report.}
+% \wss{If your team has additional metrics of productivity, please feel free to
+% add them to this report.}
 
 \end{document}
