--- a/docs/projMngmnt/POC_Team_Contrib.tex
+++ b/docs/projMngmnt/POC_Team_Contrib.tex
@@ -51,6 +51,7 @@ Oleg & 6\\
 \end{table}
 
 % \wss{If needed, an explanation for the counts can be provided here.}
+Kartik was available for one of his missed meeting but there were some wifi issues in the thode building where our room was booked. Decided to go through meeting notes in the teams chat. \\
 
 \section{Supervisor/Stakeholder Meeting Attendance}
 
@@ -92,7 +93,7 @@ Oleg   & 1\\
 \textbf{Student} & \textbf{Lectures}\\
 \midrule
 Total & 10\\
-Kartik & 7\\
+Kartik & 9\\
 Kyle   & 9\\
 Mathew & 9\\
 Oleg   & 8\\
@@ -123,6 +124,7 @@ Oleg   & 3\\
 \end{table}
 
 % \wss{If needed, an explanation for the attendance can be provided here.}
+Kartik let the team know well in advance about his different meeting (clash) and made sure the message was conveyed through one of the teammates. He let the TA know himself as well in the next tutorial meeting.
 
 \section{Commits}
 
