--- a/docs/projMngmnt/POC_Team_Contrib.tex
+++ b/docs/projMngmnt/POC_Team_Contrib.tex
@@ -189,6 +189,7 @@ Oleg   & 25 & 16\\
 \end{table}
 
 % \wss{If needed, an explanation for the counts can be provided here.}
+The number of issues assigned to Kartik might look less but this was because he took up other responsibilites one being doing the reflections for the documents.\\
 
 \section{CICD}
 
