--- a/docs/projMngmnt/POC_Team_Contrib.tex
+++ b/docs/projMngmnt/POC_Team_Contrib.tex
@@ -190,7 +190,7 @@ Oleg   & 13 & 14\\
 
 % \wss{If needed, an explanation for the counts can be provided here.}
 The number of issues assigned to Kartik might look less but this was because he took up other responsibilites one being doing the reflections for the documents.\\
-
+Kyle was the only team member to create and assign issues during the first deliverable. This was prior to completing our team git protocol, so other team members did not create issues and therefore Kyle has 8 additional issues created.
 \section{CICD}
 
 See section 7.2 of development plan found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{here}.
