Added personal section

--- a/docs/projMngmnt/POC_Team_Contrib.tex
+++ b/docs/projMngmnt/POC_Team_Contrib.tex
@@ -153,6 +153,9 @@ Oleg   & 19 &8\% \\
 % can be provided here.  If multiple people contribute to a commit, git allows for
 % multi-author commits.}
 Kyle's commits are inflated by his work on setting up CD/CI for building latex documents. To get it working, he made 74 commits to main to test building a new PDF document. With these commits removed, this is the new table:\\
+
+Oleg's commit count is low due to his preference for working in a word processor before transferring completed sections to LaTeX. Most assigned issues were completed in one go, with reviews conducted outside of GitHub's infrastructure. Additional commits result from review feedback or self-corrected typos.
+
 \begin{table}[H]
     \centering
     \begin{tabular}{lll}
