--- a/docs/projMngmnt/POC_Team_Contrib.tex
+++ b/docs/projMngmnt/POC_Team_Contrib.tex
@@ -41,11 +41,11 @@ See section 9 of Development plan found \href{https://github.com/OKKM-insights/O
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & 8\\
-Kartik & 7\\
-Kyle & 8\\
-Mathew & 8\\
-Oleg & 6\\
+Total & 10\\
+Kartik & 9\\
+Kyle & 10\\
+Mathew & 10\\
+Oleg & 8\\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -68,11 +68,11 @@ Kartik was available for one of his missed meeting but there were some wifi issu
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total  & 1\\
-Kartik & 1\\
-Kyle   & 1\\
-Mathew & 1\\
-Oleg   & 1\\
+Total  & 2\\
+Kartik & 2\\
+Kyle   & 2\\
+Mathew & 2\\
+Oleg   & 2\\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -139,11 +139,11 @@ Kartik let the team know well in advance about his different meeting (clash) and
 \toprule
 \textbf{Student} & \textbf{Commits} & \textbf{Percent}\\
 \midrule
-Total & 252 & 100\% \\
-Kartik & 54 & 21\%\\
-Kyle   & 140 & 56 \%\\
-Mathew & 39 &15\% \\
-Oleg   & 19 &8\% \\
+Total & 320 & 100\% \\
+Kartik & 63 & 20\%\\
+Kyle   & 154 & 48 \%\\
+Mathew & 69 & 21\% \\
+Oleg   & 34 & 11\% \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -152,9 +152,8 @@ Oleg   & 19 &8\% \\
 % instance, if a team member has more commits to unmerged branches, these numbers
 % can be provided here.  If multiple people contribute to a commit, git allows for
 % multi-author commits.}
-Kyle's commits are inflated by his work on setting up CD/CI for building latex documents. To get it working, he made 74 commits to main to test building a new PDF document. With these commits removed, this is the new table:\\
-
 Oleg's commit count is low due to his preference for working in a word processor before transferring completed sections to LaTeX. Most assigned issues were completed in one go, with reviews conducted outside of GitHub's infrastructure. Additional commits result from review feedback or self-corrected typos.
+Kyle's commits are inflated by his work on setting up CD/CI for building latex documents. To get it working, he made 74 commits to main to test building a new PDF document. With these commits removed, this is the new table:\\
 
 \begin{table}[H]
     \centering
@@ -162,11 +161,11 @@ Oleg's commit count is low due to his preference for working in a word processor
     \toprule
     \textbf{Student} & \textbf{Commits} & \textbf{Percent}\\
     \midrule
-    Total & 178 & 100\% \\
-    Kartik & 54 & 30\%\\
-    Kyle   & 66 & 37\%\\
-    Mathew & 39 & 22\%\\
-    Oleg   & 19 & 11\%\\
+    Total & 246 & 100\% \\
+    Kartik & 63 & 26\%\\
+    Kyle   & 80 & 32\%\\
+    Mathew & 69 & 28\%\\
+    Oleg   & 34 & 14\%\\
     \bottomrule
     \end{tabular}
     \end{table}
@@ -182,18 +181,18 @@ Oleg's commit count is low due to his preference for working in a word processor
 \toprule
 \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Assigned (C only)}\\
 \midrule
-Total & 102 & 80 \\
+Total & 102 & 73 \\
 Kartik & 0 & 7\\
-Kyle   & 57 & 25\\
-Mathew & 15 & 11\\
-Oleg   & 13 & 14\\
+Kyle   & 61 & 26\\
+Mathew & 24 & 21\\
+Oleg   & 17 & 19\\
 \bottomrule
 \end{tabular}
 \end{table}
 
 % \wss{If needed, an explanation for the counts can be provided here.}
-The number of issues assigned to Kartik might look less but this was because he took up other responsibilites one being doing the reflections for the documents.\\
-Kyle was the only team member to create and assign issues during the first deliverable. This was prior to completing our team git protocol, so other team members did not create issues and therefore Kyle has 8 additional issues created.
+The number of issues assigned to Kartik might look less but this was because he took up other responsibilites, one being doing the reflections for the documents.\\
+Kyle was the only team member to create and assign issues during the first deliverable. This was prior to completing our team git protocol, so other team members did not create issues and therefore Kyle has 8 additional issues created. Kyle also authors meeting issues.
 \section{CICD}
 
 See section 7.2 of development plan found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{here}.
